03-spring-music-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: spring-music
  labels:
    app: spring-music
spec:
  virtualhost:
    fqdn: music.10.220.30.26.nip.io
  routes:
    - conditions:
      - prefix: /
      services:
        - name: spring-music-service
          port: 80
